test/classes/initializers/records/returnArg.good
returnArg.chpl:6: error: no copy initializer defined for type 'Foo'
