test/classes/initializers/records/returnArg.future
bug: internal error when returning record argument from function
#7939

The record defines an initializer.  We would like this to be an error
requesting a copy initializer
